--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   ],
   "author": "Rudraksh MK",
   "license": "MIT",
+  dependencies": {
+    "http-proxy": "^1.14.0",
+    "http-proxy-rules": "^1.0.1"
+  },
   "bugs": {
     "url": "https://github.com/rudimk/supremacy/issues"
   },
